092_polynomial_1/grade.txt
Grading at 10/26/2024:15:16:15.297481
For commit ID 9e2efbaa60a0d044da79899cc23b603578cb0d7b
Grading at Sat Oct 26 11:16:15 AM EDT 2024
Compiling your code with our test main
testmain.cpp: In function ‘int main()’:
testmain.cpp:8:8: error: ‘cout’ is not a member of ‘std’
    8 |   std::cout << "default poly (p0): " << p0 << "\n";
      |        ^~~~
testmain.cpp:5:1: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
    4 | #include "poly.hpp"
  +++ |+#include <iostream>
    5 | 
testmain.cpp:14:8: error: ‘cout’ is not a member of ‘std’
   14 |   std::cout << "p1: " << p1 << "\n";
      |        ^~~~
testmain.cpp:14:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:15:8: error: ‘cout’ is not a member of ‘std’
   15 |   std::cout << "-p1: " << -p1 << "\n";
      |        ^~~~
testmain.cpp:15:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:20:8: error: ‘cout’ is not a member of ‘std’
   20 |   std::cout << "p2: " << p2 << "\n";
      |        ^~~~
testmain.cpp:20:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:21:8: error: ‘cout’ is not a member of ‘std’
   21 |   std::cout << "p1 + p2: " << p1 + p2 << "\n";
      |        ^~~~
testmain.cpp:21:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:22:8: error: ‘cout’ is not a member of ‘std’
   22 |   std::cout << "p1 * p2: " << p1 * p2 << "\n";
      |        ^~~~
testmain.cpp:22:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:23:8: error: ‘cout’ is not a member of ‘std’
   23 |   std::cout << "p1 - p2: " << p1 - p2 << "\n";
      |        ^~~~
testmain.cpp:23:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:27:8: error: ‘cout’ is not a member of ‘std’
   27 |   std::cout << "p3: " << p3 << "\n";
      |        ^~~~
testmain.cpp:27:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:29:8: error: ‘cout’ is not a member of ‘std’
   29 |   std::cout << "temp is " << temp << "\n";
      |        ^~~~
testmain.cpp:29:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:31:8: error: ‘cout’ is not a member of ‘std’
   31 |   std::cout << "after assignment, temp is " << temp << "\n";
      |        ^~~~
testmain.cpp:31:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:35:8: error: ‘cout’ is not a member of ‘std’
   35 |   std::cout << "p4: " << p4 << "\n";
      |        ^~~~
testmain.cpp:35:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:36:8: error: ‘cout’ is not a member of ‘std’
   36 |   std::cout << "p3 * p4: " << p3 * p4 << "\n";
      |        ^~~~
testmain.cpp:36:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:38:8: error: ‘cout’ is not a member of ‘std’
   38 |   std::cout << "p3v2: " << p3 << "\n";
      |        ^~~~
testmain.cpp:38:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:40:8: error: ‘cout’ is not a member of ‘std’
   40 |   std::cout << "p3v3: " << p3 << "\n";
      |        ^~~~
testmain.cpp:40:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:42:8: error: ‘cout’ is not a member of ‘std’
   42 |   std::cout << "p3v4: " << p3 << "\n";
      |        ^~~~
testmain.cpp:42:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:44:8: error: ‘cout’ is not a member of ‘std’
   44 |   std::cout << "p4v2: " << p4 << "\n";
      |        ^~~~
testmain.cpp:44:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:48:8: error: ‘cout’ is not a member of ‘std’
   48 |   std::cout << "p5: " << p5 << "\n";
      |        ^~~~
testmain.cpp:48:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:49:8: error: ‘cout’ is not a member of ‘std’
   49 |   std::cout << "(p5-p4) * (p3+p2) + p1 = " << (p5 - p4) * (p3 + p2) + p1 << "\n";
      |        ^~~~
testmain.cpp:49:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:60:8: error: ‘cout’ is not a member of ‘std’
   60 |   std::cout << "polys[6] = " << polys[6] << "\n";
      |        ^~~~
testmain.cpp:60:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:64:12: error: ‘cout’ is not a member of ‘std’
   64 |       std::cout << "polys[" << i << "] == polys[" << j << "] ? " << (polys[i] == polys[j])
      |            ^~~~
testmain.cpp:64:12: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:66:12: error: ‘cout’ is not a member of ‘std’
   66 |       std::cout << "polys[" << i << "] != polys[" << j << "] ? " << (polys[i] != polys[j])
      |            ^~~~
testmain.cpp:66:12: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:69:10: error: ‘cout’ is not a member of ‘std’
   69 |     std::cout << "polys[" << i << "] - polys[" << i << "] == p0 ? "
      |          ^~~~
testmain.cpp:69:10: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:71:10: error: ‘cout’ is not a member of ‘std’
   71 |     std::cout << "polys[" << i << "] - polys[" << i << "] != p0 ? "
      |          ^~~~
testmain.cpp:71:10: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:78:8: error: ‘cout’ is not a member of ‘std’
   78 |   std::cout << "pd1 is " << pd1 << "\n";
      |        ^~~~
testmain.cpp:78:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:80:8: error: ‘cout’ is not a member of ‘std’
   80 |   std::cout << "pd1 is now " << pd1 << "\n";
      |        ^~~~
testmain.cpp:80:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:81:8: error: ‘cout’ is not a member of ‘std’
   81 |   std::cout << "pd1 * 3.1 is " << pd1 * -1.2 << "\n";
      |        ^~~~
testmain.cpp:81:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
testmain.cpp:84:8: error: ‘cout’ is not a member of ‘std’
   84 |   std::cout << "pc1 is " << pc1 << "\n";
      |        ^~~~
testmain.cpp:84:8: note: ‘std::cout’ is defined in header ‘<iostream>’; did you forget to ‘#include <iostream>’?
g++ failed

Overall Grade: FAILED
